--- a/app/src/main/res/drawable/ic_color_lens_off.xml
+++ b/app/src/main/res/drawable/ic_color_lens_off.xml
@@ -1,35 +1,14 @@
-<!--
-  ~   ColorSheet
-  ~
-  ~   Copyright (c) 2019. Sasikanth Miriyampalli
-  ~
-  ~   Licensed under the Apache License, Version 2.0 (the "License");
-  ~   you may not use this file except in compliance with the License.
-  ~   You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~   Unless required by applicable law or agreed to in writing, software
-  ~   distributed under the License is distributed on an "AS IS" BASIS,
-  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~   See the License for the specific language governing permissions and
-  ~   limitations under the License.
-  ~
-  -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M9.9,5.1l1.9,1.9l7.7,7.7c1-0.9,1.6-2.2,1.6-3.6c0-4.4-4-8-9-8c-1.2,0-2.4,0.2-3.5,0.7L9.9,5.1L9.9,5.1z
-M17.5,9c0.8,0,1.5,0.7,1.5,1.5c0,0.8-0.7,1.5-1.5,1.5S16,11.3,16,10.5C16,9.7,16.7,9,17.5,9z
-M14.5,5C15.3,5,16,5.7,16,6.5
-C16,7.3,15.3,8,14.5,8S13,7.3,13,6.5C13,5.7,13.7,5,14.5,5z
-M22,19.7L3.3,1L2,2.3l3.5,3.5C4,7.4,3,9.6,3,12c0,5,4,9,9,9
-c0.8,0,1.5-0.7,1.5-1.5c0-0.4-0.2-0.7-0.4-1c-0.2-0.3-0.4-0.6-0.4-1c0-0.8,0.7-1.5,1.5-1.5h1.5l5,5L22,19.7z
-M6.5,12
-C5.7,12,5,11.3,5,10.5C5,9.7,5.7,9,6.5,9S8,9.7,8,10.5C8,11.3,7.3,12,6.5,12z" />
+  <path
+      android:pathData="M3,3L1.586,4.414L4.38,7.209C3.506,8.596 3,10.239 3,12C3,16.97 7.03,21 12,21C12.83,21 13.5,20.33 13.5,19.5C13.5,19.11 13.35,18.76 13.11,18.49C12.88,18.23 12.73,17.88 12.73,17.5C12.73,16.972 13.001,16.508 13.413,16.241L18.586,21.414L20,20L3,3ZM6.201,9.03L7.97,10.799C7.832,11.485 7.228,12 6.5,12C5.67,12 5,11.33 5,10.5C5,9.772 5.515,9.168 6.201,9.03Z"
+      android:fillColor="#000000"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M21,11C21,12.939 19.894,14.622 18.279,15.451L10.472,7.644C10.795,7.369 11,6.959 11,6.5C11,5.67 10.33,5 9.5,5C9.041,5 8.631,5.205 8.356,5.528L7.209,4.38C8.596,3.506 10.239,3 12,3C16.97,3 21,6.58 21,11ZM14.5,8C13.67,8 13,7.33 13,6.5C13,5.67 13.67,5 14.5,5C15.33,5 16,5.67 16,6.5C16,7.33 15.33,8 14.5,8ZM17.5,12C16.67,12 16,11.33 16,10.5C16,9.67 16.67,9 17.5,9C18.33,9 19,9.67 19,10.5C19,11.33 18.33,12 17.5,12Z"
+      android:fillColor="#000000"
+      android:fillType="evenOdd"/>
 </vector>
